added images to index.html

--- a/Movies_App/index.html
+++ b/Movies_App/index.html
@@ -1,1 +1,36 @@
-hello World
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
+    <script src="js/app.js"></script>
+    <title>Movies App</title>
+  </head>
+  <body>
+    <div class="body">
+      <div class="header">
+          <div class="moviesLogo">
+            <!-- <img src="images/myMovie.jpeg" alt="popcornImg"> -->
+            <p>Movies, Movies & Movies</p>
+          </div>
+          <div class="moviesCorousel">
+            <img src="images/AndaazApnaApna.jpeg" alt="AndaazApnaApna">
+            <img src="images/BajrangiBhaijaan.jpeg" alt="BajrangiBhaijaan">
+            <img src="images/Ghajni.jpeg" alt="Ghajni">
+            <img src="images/HAHK.jpeg" alt="HAHK">
+            <img src="images/HeraPheri.jpeg" alt="HeraPheri">
+
+          </div>
+      </div>
+      <div class="main">
+
+      </div>
+      <div class="footer">
+
+      </div>
+    </div>
+
+  </body>
+</html>
