added previous and next buttons to the header

--- a/Movies_App/index.html
+++ b/Movies_App/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
     <script src="js/app.js"></script>
@@ -13,16 +14,23 @@
       <div class="header">
           <div class="moviesLogo">
             <!-- <img src="images/myMovie.jpeg" alt="popcornImg"> -->
-            <p>Movies, Movies & Movies</p>
+            <h1>Movies, Movies & Movies</h1>
           </div>
-          <div class="moviesCorousel">
-            <img src="images/AndaazApnaApna.jpeg" alt="AndaazApnaApna">
-            <img src="images/BajrangiBhaijaan.jpeg" alt="BajrangiBhaijaan">
-            <img src="images/Ghajni.jpeg" alt="Ghajni">
-            <img src="images/HAHK.jpeg" alt="HAHK">
-            <img src="images/HeraPheri.jpeg" alt="HeraPheri">
+          <div class="carouselContainer">
 
+
+            <button class='carousel-button previous'><<<</button>
+            <div class="moviesCorousel">
+              <img src="images/AndaazApnaApna.jpeg" alt="AndaazApnaApna">
+              <img src="images/BajrangiBhaijaan.jpeg" alt="BajrangiBhaijaan">
+              <img src="images/Ghajni.jpeg" alt="Ghajni">
+              <img src="images/HAHK.jpeg" alt="HAHK">
+              <img src="images/HeraPheri.jpeg" alt="HeraPheri">
+            </div>
+            <button class='carousel-button next'>>>></button>
+            
           </div>
+
       </div>
       <div class="main">
 
