added previous and next buttons event handlers

--- a/Movies_App/index.html
+++ b/Movies_App/index.html
@@ -18,17 +18,16 @@
           </div>
           <div class="carouselContainer">
 
-
             <button class='carousel-button previous'><<<</button>
             <div class="moviesCorousel">
-              <img src="images/AndaazApnaApna.jpeg" alt="AndaazApnaApna">
-              <img src="images/BajrangiBhaijaan.jpeg" alt="BajrangiBhaijaan">
-              <img src="images/Ghajni.jpeg" alt="Ghajni">
-              <img src="images/HAHK.jpeg" alt="HAHK">
-              <img src="images/HeraPheri.jpeg" alt="HeraPheri">
+              <img src="images/AndaazApnaApna.jpeg" alt="AndaazApnaApna" id='0'>
+              <img src="images/BajrangiBhaijaan.jpeg" alt="BajrangiBhaijaan" id='1'>
+              <img src="images/Ghajni.jpeg" alt="Ghajni" id='2'>
+              <img src="images/HAHK.jpeg" alt="HAHK" id='3'>
+              <img src="images/HeraPheri.jpeg" alt="HeraPheri" id='4'>
             </div>
             <button class='carousel-button next'>>>></button>
-            
+
           </div>
 
       </div>
