added movies table

--- a/Movies_App/index.html
+++ b/Movies_App/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
@@ -32,7 +33,13 @@
 
       </div>
       <div class="main">
+            <div class="moviesTableHeader">
+              <h2>Popular movies of the year</h2>
+              <input type="text" placeholder="ex: 2019" class="inputYear">
+            </div>
+            <div class="moviesTable">
 
+            </div>
       </div>
       <div class="footer">
 
