added responsive user button

--- a/Movies_App/index.html
+++ b/Movies_App/index.html
@@ -35,8 +35,10 @@
       <div class="main">
             <div class="moviesTableHeader">
               <h2>Popular movies of the year</h2>
-              <input type="text" placeholder="ex: 2019" class="inputYear">
+              <input type="text" placeholder="ex: 2019" class="inputYear"/>
+              <input type="submit" name="submit" value="GO" class="inputYearBtn"/>
             </div>
+
             <div class="moviesTable">
 
             </div>
