added modal to the click even

--- a/Movies_App/index.html
+++ b/Movies_App/index.html
@@ -40,8 +40,15 @@
             </div>
 
             <div class="moviesTable">
-
+          
             </div>
+      </div>
+      <div class="modal">
+        <div class="modal-textbox">
+          <a id="close" href="#">[X]</a>
+          <h1>Movie Poster</h1>
+          <p>Details of the movie goes here</p>
+        </div>
       </div>
       <div class="footer">
 
