--- a/Movies_App/index.html
+++ b/Movies_App/index.html
@@ -48,8 +48,8 @@
       <div class="modal">
         <div class="modal-textbox">
           <a id="close" href="#">[X]</a>
-          <h1>Movie Poster</h1>
-          <p>Details of the movie goes here</p>
+          <!-- <h1>Movie Poster</h1>
+          <p>Details of the movie goes here</p> -->
         </div>
       </div>
       <div class="footer">
