added image and overview modals

--- a/Movies_App/index.html
+++ b/Movies_App/index.html
@@ -47,9 +47,14 @@
       </div>
       <div class="modal">
         <div class="modal-textbox">
-          <a id="close" href="#">[X]</a>
+          <!-- <a id="close" href="#">[X]</a> -->
           <!-- <h1>Movie Poster</h1>
           <p>Details of the movie goes here</p> -->
+        </div>
+      </div>
+      <div class="modal-overview">
+        <div class="modal-textbox-overview">
+
         </div>
       </div>
       <div class="footer">
