added side div for watch list

--- a/Movies_App/index.html
+++ b/Movies_App/index.html
@@ -34,15 +34,20 @@
           </div>
 
       </div>
-      <div class="main">
+
             <div class="moviesTableHeader">
-              <h2>Popular movies of the year</h2>
+              <h2>Find Popular Movies of the Year</h2>
               <input type="text" placeholder="ex: 2019" class="inputYear"/>
               <input type="submit" name="submit" value="GO" class="inputYearBtn"/>
             </div>
-
+          <div class="main">
             <div class="moviesTable">
 
+            </div>
+            <div class="aside">
+              <ul class="my-watchlist">
+                  <h3>*My Watch List*</h3>
+              </ul>
             </div>
       </div>
       <div class="modal">
@@ -58,6 +63,14 @@
         </div>
       </div>
       <div class="footer">
+        <div class="trailers">
+          <a href="https://www.youtube.com/watch?v=p4Z_ueeT_XQ" target="_blank">Go here to watch Latest Movie Trailers</a>
+          <a href="#">Download Movies From Here</a>
+        </div>
+        <div class="news">
+          <a href="#">Read Bollywood News</a>
+          <a href="#">Subscribe to news here</a>
+        </div>
 
       </div>
     </div>
