added main section skeleton

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,16 +38,16 @@
     <main>
       <div class="grid-container">
         <div class="grid-item">
-          <h3>About Me</h3>
+          <h5>About Me</h5>
         </div>
         <div class="grid-item">
-          <h3>Projects</h3>
+          <h5>My Work</h5>
         </div>
         <div class="grid-item">
-          <h3>Work Experience</h3>
+          <h5>My Experience</h5>
         </div>
         <div class="grid-item">
-          <h3>Resume</h3>
+          <h5>Contact</h5>
         </div>
       </div>
 
