added main section skeleton

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,20 +36,23 @@
       </div>
     </header>
     <main>
-      <div class="grid-container">
-        <div class="grid-item">
-          <h5>About Me</h5>
-        </div>
-        <div class="grid-item">
-          <h5>My Work</h5>
-        </div>
-        <div class="grid-item">
-          <h5>My Experience</h5>
-        </div>
-        <div class="grid-item">
-          <h5>Contact</h5>
+      <div class="main-grid">
+        <div class="grid-container">
+          <div class="grid-item">
+            <h5>About Me</h5>
+          </div>
+          <div class="grid-item">
+            <h5>My Work</h5>
+          </div>
+          <div class="grid-item">
+            <h5>My Experience</h5>
+          </div>
+          <div class="grid-item">
+            <h5>Contact</h5>
+          </div>
         </div>
       </div>
+
 
     </main>
 
