added css and work content

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,8 +21,8 @@
           </div>
           <div class="header-menu">
             <ul class="header-ul">
-              <li><a href="#">Projects</a></li>
-              <li><a href="#">About Me</a></li>
+              <li><a href="#myWork">Projects</a></li>
+              <li><a href="#aboutMe">About Me</a></li>
               <!-- <li><a href="#">Contact</a></li> -->
             </ul>
           </div>
@@ -39,20 +39,86 @@
       <div class="main-grid">
         <div class="grid-container">
           <div class="grid-item">
-            <h5>About Me</h5>
+            <h5><a href="#aboutMe" class="a-btn">My Skills</a></h5>
           </div>
           <div class="grid-item">
-            <h5>My Work</h5>
+            <h5><a href="#myWork" class="a-btn">My Work</a></h5>
           </div>
           <div class="grid-item">
-            <h5>My Experience</h5>
+            <h5><a href="#myExperience" class="a-btn">My Experience</a></h5>
           </div>
           <div class="grid-item">
-            <h5>Contact</h5>
+            <h5><a href="#myContact" class="a-btn">Contact</a></h5>
           </div>
         </div>
       </div>
+      <div id="aboutMe">
+        <h2>About Me</h2>
+        <p></p>
+      </div>
+      <div id="myWork">
+        <h2>My Work</h2>
+        <div class="">
+			    <div class="row-wheat">
+          	<div class="work-item-row">
+			    		<div class="work-item-img">
+			    			<img src="images/math-sheet.png" class="work-img">
+			    		</div>
+			    		<div class="work-item-desc">
+			    			<h2>Math Sheet Generator</h2>
+			    			<p>A simple to use Web App built to help Kids , Parents and Teachers. It generates math sheets for practice at home or online. Users can select various options like Operation, grade level or number of questions per sheet to generate a sheet. Sheets can be downloaded or solved online.</p>
+			    			<h4>Technology Stack</h4>
+			    			<p>Math Sheet Generator is built with MERN Stack - Mongo,Express, React and Node.js. A Node.js server hosted on Heroku acts as a middle-man between React and backend MongoDB</p>
+			    		</div>
+		    		</div>
+		    		<div class="row-launch">
+		    				<a href="https://math-sheet-generator.herokuapp.com/" target="blank">Launch App</a>
+	    			</div>
+					</div>
+          <div class="row-grey">
+          	<div class="work-item-row">
 
+			    		<div class="work-item-desc">
+			    			<h2>Job Tracker</h2>
+			    			<p>JobTraxer is an application built with an idea to help user manage his/her job applications </p>
+			    			<h4>Technology Stack</h4>
+			    			<p>Math Sheet Generator is built using- Ruby, Rails Postgres SQL and React. Application is deployed on Heroku where Ruby on Rails acts as an API only server for React front end.</p>
+			    		</div>
+              <div class="work-item-img">
+                <img src="images/jobTraxer.png" class="work-img">
+              </div>
+		    		</div>
+
+		    		<div class="row-launch">
+		    				<a href="http://jobtraxer.herokuapp.com/" target="blank">Launch App</a>
+	    			</div>
+					</div>
+          <div class="row-wheat">
+          	<div class="work-item-row">
+			    		<div class="work-item-img">
+			    			<img src="images/bootcapm-boutique.png" class="work-img">
+			    		</div>
+			    		<div class="work-item-desc">
+			    			<h2>Math Sheet Generator</h2>
+			    			<p>A simple to use Web App built to help Kids , Parents and Teachers. It generates math sheets for practice at home or online. Users can select various options like Operation, grade level or number of questions per sheet to generate a sheet. Sheets can be downloaded or solved online.</p>
+			    			<h4>Technology Stack</h4>
+			    			<p>Math Sheet Generator is built with MERN Stack - Mongo,Express, React and Node.js. A Node.js server hosted on Heroku acts as a middle-man between React and backend MongoDB</p>
+			    		</div>
+		    		</div>
+		    		<div class="row-launch">
+		    				<a href="https://math-sheet-generator.herokuapp.com/" target="blank">Launch App</a>
+	    			</div>
+					</div>
+
+			</div>
+
+      </div>
+      <div id="myExperience">
+        <h2>My Experience</h2>
+      </div>
+      <div id="myContact">
+        <h2>My Contact</h2>
+      </div>
 
     </main>
 
