added css and work content

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -53,13 +53,27 @@
         </div>
       </div>
       <div id="aboutMe">
-        <h2>About Me</h2>
-        <p></p>
+        <div class="aboutMe-sec">
+          <div class="aboutMe-img">
+            <img src="images/myImage.jpeg" class="My-img">
+          </div>
+          <div class="aboutMe-desc">
+            <h2>About Me</h2>
+            <p>Hello! I am Pooja Manuja. I am a front end developer with a passion for programming. I take my work personally, always going above and beyond.Besides programming I enjoy spending time outdoors experiencing nature.
+            </p>
+            <h4> My Skills:</h4>
+            <p><b>Front End:</b> Javascript ES6, React, AngularJS, JQuery,HTML5/CSS, Bootstrap,Skeleton,Core Java</p>
+            <p><b>Back End:</b> Express, Node.js, MongoDB, SQL Server, mysql. Postgres SQL, Restful APIs</p>
+            <p><b>Others:</b>Unix shell Commands, Git/Github, Jira, Confluence, IBM MDM PIM</p>
+        </div>
+      </div>
+
       </div>
       <div id="myWork">
-        <h2>My Work</h2>
+
         <div class="">
 			    <div class="row-wheat">
+            <h2>My Work</h2>
           	<div class="work-item-row">
 			    		<div class="work-item-img">
 			    			<img src="images/math-sheet.png" class="work-img">
@@ -78,13 +92,13 @@
           <div class="row-grey">
           	<div class="work-item-row">
 
-			    		<div class="work-item-desc">
-			    			<h2>Job Tracker</h2>
-			    			<p>JobTraxer is an application built with an idea to help user manage his/her job applications </p>
+			    		<div class="work-item-img">
+			    			<h2>JobTraxer</h2>
+			    			<p>JobTraxer is a job tracking application built with an idea to help user manage his/her job applications. User can keep track of applied/Interviewed applications </p>
 			    			<h4>Technology Stack</h4>
 			    			<p>Math Sheet Generator is built using- Ruby, Rails Postgres SQL and React. Application is deployed on Heroku where Ruby on Rails acts as an API only server for React front end.</p>
 			    		</div>
-              <div class="work-item-img">
+              <div class="work-item-img work-item-desc">
                 <img src="images/jobTraxer.png" class="work-img">
               </div>
 		    		</div>
@@ -99,14 +113,14 @@
 			    			<img src="images/bootcapm-boutique.png" class="work-img">
 			    		</div>
 			    		<div class="work-item-desc">
-			    			<h2>Math Sheet Generator</h2>
-			    			<p>A simple to use Web App built to help Kids , Parents and Teachers. It generates math sheets for practice at home or online. Users can select various options like Operation, grade level or number of questions per sheet to generate a sheet. Sheets can be downloaded or solved online.</p>
+			    			<h2>Bootcamp Boutique</h2>
+			    			<p> Bootcamp Boutique is an shopping experience for bootmcampers providing them carefully assembled list of essential products needed for bootcamp </p>
 			    			<h4>Technology Stack</h4>
-			    			<p>Math Sheet Generator is built with MERN Stack - Mongo,Express, React and Node.js. A Node.js server hosted on Heroku acts as a middle-man between React and backend MongoDB</p>
+			    			<p>BootCamp Boutique is built with MEAN Stack - Mongo,Express, AngularJS(1.5) and Node.js. A Node.js server hosted on Heroku acts as a middle-man between Angular and backend MongoDB</p>
 			    		</div>
 		    		</div>
 		    		<div class="row-launch">
-		    				<a href="https://math-sheet-generator.herokuapp.com/" target="blank">Launch App</a>
+		    				<a href="https://bootcamp-boutique.herokuapp.com/" target="blank">Launch App</a>
 	    			</div>
 					</div>
 
@@ -114,10 +128,13 @@
 
       </div>
       <div id="myExperience">
-        <h2>My Experience</h2>
+        <h3>Please visit my Resume Page or LinkedIn account to know more about my experience</h3>
+        <a href="https://www.linkedin.com/in/poojamanuja/">LinkedIn</a>
+        <a href="https://github.com/pmanuja">Github</a>
       </div>
       <div id="myContact">
         <h2>My Contact</h2>
+        <h4>manuja.pooja@gmail.com</h4>
       </div>
 
     </main>
