added css and work content

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@
       <div class="header-container">
         <div class="header">
           <div class="header-name">
-            <h6 class="name" >POOJA MANUJA</h6>
+            <h3 class="name" >POOJA MANUJA</h3>
           </div>
           <div class="header-menu">
             <ul class="header-ul">
@@ -30,7 +30,7 @@
         <div class="header-bio">
           <p><h3>Hi, I'm Pooja!</h3></p>
           <p><h3>I'm a Web Developer based in Atlanta,GA</h3></p>
-          <p><h5>Some of my skills include : Javascript, React, Ruby/Rails,Postgres Sql, My Sql, HTML, CSS</h5></p>
+          <p><h5>Some of my skills include : Javascript, React, AngularJS, Ruby/Rails,Postgres Sql, My Sql, HTML5, CSS</h5></p>
         </div>
 
       </div>
@@ -53,27 +53,26 @@
         </div>
       </div>
       <div id="aboutMe">
+          <h2>About Me</h2>
         <div class="aboutMe-sec">
           <div class="aboutMe-img">
             <img src="images/myImage.jpeg" class="My-img">
           </div>
           <div class="aboutMe-desc">
-            <h2>About Me</h2>
-            <p>Hello! I am Pooja Manuja. I am a front end developer with a passion for programming. I take my work personally, always going above and beyond.Besides programming I enjoy spending time outdoors experiencing nature.
-            </p>
+            <p>Hello! I am <b>Pooja Manuja</b>. </p>
+            <p>I am a front end developer with a passion for programming. I take my work personally, always going above and beyond.</p>
+            <p>Besides programming, I enjoy spending time outdoors experiencing nature.</p>
             <h4> My Skills:</h4>
             <p><b>Front End:</b> Javascript ES6, React, AngularJS, JQuery,HTML5/CSS, Bootstrap,Skeleton,Core Java</p>
             <p><b>Back End:</b> Express, Node.js, MongoDB, SQL Server, mysql. Postgres SQL, Restful APIs</p>
             <p><b>Others:</b>Unix shell Commands, Git/Github, Jira, Confluence, IBM MDM PIM</p>
         </div>
       </div>
-
       </div>
       <div id="myWork">
-
-        <div class="">
+          <h2>My Work</h2>
 			    <div class="row-wheat">
-            <h2>My Work</h2>
+
           	<div class="work-item-row">
 			    		<div class="work-item-img">
 			    			<img src="images/math-sheet.png" class="work-img">
@@ -124,17 +123,20 @@
 	    			</div>
 					</div>
 
-			</div>
-
       </div>
       <div id="myExperience">
-        <h3>Please visit my Resume Page or LinkedIn account to know more about my experience</h3>
-        <a href="https://www.linkedin.com/in/poojamanuja/">LinkedIn</a>
-        <a href="https://github.com/pmanuja">Github</a>
+          <!-- <h2 class="my-exp">My Experience</h2> -->
+          <p class="my-exp" >Visit my Resume page or LinkedIn/Github account</p>
+          <ul class="my-exp-resume">
+            <li><a class="my-exp-resume" href="https://www.linkedin.com/in/poojamanuja/">LinkedIn</a></li>
+            <li><a class="my-exp-resume" href="https://github.com/pmanuja">Github</a></li>
+            <li><a class="my-exp-resume" href="Web Developer-Pooja Manuja -Resume  (1).docx">Resume</a></li>
+          </ul>
+
       </div>
       <div id="myContact">
-        <h2>My Contact</h2>
-        <h4>manuja.pooja@gmail.com</h4>
+        <!-- <h2>My Contact</h2> -->
+          <h4 class="my-exp"><b>Contact </b> <p>manuja.pooja@gmail.com</p></h4>
       </div>
 
     </main>
