added css and work content

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,8 +21,8 @@
           </div>
           <div class="header-menu">
             <ul class="header-ul">
-              <li><a href="#myWork">Projects</a></li>
-              <li><a href="#aboutMe">About Me</a></li>
+              <li class="header-nav"><a href="#myWork">Projects</a></li>
+              <li class="header-nav"><a href="#aboutMe">About Me</a></li>
               <!-- <li><a href="#">Contact</a></li> -->
             </ul>
           </div>
