--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -136,7 +136,7 @@
       </div>
       <div id="myContact">
         <!-- <h2>My Contact</h2> -->
-          <h4 class="my-exp"><b>Contact </b> <p>manuja.pooja@gmail.com</p></h4>
+          <h4 class="my-exp"><b style="color:black;">Contact </b> <p>manuja.pooja@gmail.com</p></h4>
       </div>
 
     </main>
