--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -56,7 +56,7 @@
           <h2>About Me</h2>
         <div class="aboutMe-sec">
           <div class="aboutMe-img">
-            <img src="images/myImage.jpeg" class="My-img">
+            <img src="images/myImage1.jpg" class="My-img">
           </div>
           <div class="aboutMe-desc">
             <p>Hello! I am <b>Pooja Manuja</b>. </p>
