--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -130,7 +130,7 @@
           <ul class="my-exp-resume">
             <li><a class="my-exp-resume" href="https://www.linkedin.com/in/poojamanuja/">LinkedIn</a></li>
             <li><a class="my-exp-resume" href="https://github.com/pmanuja">Github</a></li>
-            <li><a class="my-exp-resume" href="Web Developer-Pooja Manuja -Resume  (1).docx">Resume</a></li>
+            <li><a class="my-exp-resume" href="Pooja Manuja-Resume.docx">Resume</a></li>
           </ul>
 
       </div>
